# trilka

./: .gitignore  .gitmodules  Makefile  meson.build  premake5.lua  trilka.cpp
Sandbox/: Makefile
Trilka/: Makefile  meson.build
Trilka/src/: Application.cpp  Core.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Trilka.hpp  tkpch.cpp  tkpch.hpp
Trilka/src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
subprojects/sandbox/: Makefile  Sandbox.cpp  meson.build
subprojects/trilka/: Makefile  Trilka.hpp  meson.build
subprojects/trilka/src/trilka/: Application.cpp  Application.hpp  Entrypoint.hpp
